--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: Install Pandoc
+        run: apt-get install pandoc
       - name: Install dependencies
         run: python3.8 -m pip install nox
       - name: Build documentation
