--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install Pandoc
-        run: apt-get install pandoc
       - name: Install dependencies
-        run: python3.8 -m pip install nox
+        run: |
+            sudo apt-get install --yes pandoc
+            python3.8 -m pip install nox
       - name: Build documentation
         run: nox -s docs
