--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,42 @@ jobs:
             python3.8 -m pip install nox
       - name: Build documentation
         run: nox -s docs
+
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
+        es-version: [7.8.0, 7.9.0, 7.10.0]
+        pandas-version: [1.0.5, 1.1.5, 1.2.0]
+
+        include:
+          - python-version: 3.6
+            es-version: 7.10.0
+            pandas-version: 1.1.5
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v1
+      - name: Setup Elasticsearch
+        run: |
+          mkdir /tmp/elasticsearch
+          wget -O - https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${{ matrix.es-version }}-linux-x86_64.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1
+          /tmp/elasticsearch/bin/elasticsearch -d
+      - name: Setup Python - ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Set up Python 3.8 for Nox
+        if: matrix.python-version != '3.8'
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python3.8 -m pip install nox
+      - name: Run Tests
+        run: |
+          PANDAS_VERSION=${{ matrix.pandas-version }} nox -rs test-${{ matrix.python-version }}
