--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-elasticsearch>=7.7
+elasticsearch>=8.0.0a1,<9
 pandas>=1.2.0
 matplotlib
 pytest>=5.2.1
@@ -12,6 +12,8 @@ lightgbm
 pytest-cov
 mypy
 huggingface-hub>=0.0.17
-sentence-transformers>=2.0.0
-torch>=1.9.0
-transformers[torch]>=4.11.0
+
+# Torch doesn't support Python 3.10 yet (pytorch/pytorch#66424)
+sentence-transformers>=2.0.0; python_version<'3.10'
+torch>=1.9.0; python_version<'3.10'
+transformers[torch]>=4.11.0; python_version<'3.10'
