--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,36 @@
+#
+# Basic requirements
+#
 elasticsearch>=8,<9
-pandas>=1.2.0
-matplotlib
+pandas>=1.2,<2
+matplotlib<4
+numpy<2
+tqdm<5
+
+#
+# Extras
+#
+scikit-learn>=0.22.1,<2
+xgboost>=0.90,<2
+scikit-learn>=0.22.1,<2
+lightgbm>=2,<4
+
+# PyTorch doesn't support Python 3.10 yet (pytorch/pytorch#66424)
+sentence-transformers>=2.1.0,<3; python_version<'3.10'
+torch>=1.9.0,<2; python_version<'3.10'
+transformers[torch]>=4.12.0,<5; python_version<'3.10'
+
+#
+# Testing
+#
 pytest>=5.2.1
 pytest-mock
-nbval
-numpydoc>=0.9.0
-scikit-learn>=0.22.1
-xgboost>=1
-nox
-lightgbm
 pytest-cov
-mypy
-huggingface-hub>=0.0.17
+nbval
 
-# Torch doesn't support Python 3.10 yet (pytorch/pytorch#66424)
-sentence-transformers>=2.1.0; python_version<'3.10'
-torch>=1.9.0; python_version<'3.10'
-transformers[torch]>=4.12.0; python_version<'3.10'
+#
+# Docs
+#
+nox
+numpydoc>=0.9.0
+mypy
