--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 #
 # Basic requirements
 #
-elasticsearch>=8,<9
+elasticsearch>=8.3,<9
 pandas>=1.2,<2
 matplotlib<4
 numpy<2
@@ -16,9 +16,12 @@ scikit-learn>=0.22.1,<2
 lightgbm>=2,<4
 
 # PyTorch doesn't support Python 3.10 yet (pytorch/pytorch#66424)
-sentence-transformers>=2.1.0,<3; python_version<'3.10'
-torch>=1.11.0,<2; python_version<'3.10'
-transformers[torch]>=4.12.0,<5; python_version<'3.10'
+
+# Elasticsearch uses v1.11.0 of PyTorch
+torch>=1.11.0,<1.12.0; python_version<'3.10'
+# Versions known to be compatible with torch 1.11
+sentence-transformers>=2.1.0,<=2.2.2; python_version<'3.10'
+transformers[torch]>=4.12.0,<=4.20.1; python_version<'3.10'
 
 #
 # Testing
