--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -5,6 +5,7 @@ nbval
 scikit-learn>=0.22.1
 xgboost>=1
 lightgbm
+sphinx==5.3.0
 nbsphinx
 git+https://github.com/pandas-dev/pydata-sphinx-theme.git
 
