--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -1,10 +1,11 @@
 elasticsearch>=7.7
-pandas>=1.2.0
+pandas==1.5.0
 matplotlib
 nbval
 scikit-learn>=0.22.1
 xgboost>=1
 lightgbm
+sphinx==5.3.0
 nbsphinx
 git+https://github.com/pandas-dev/pydata-sphinx-theme.git
 
