--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -1,6 +1,6 @@
 elasticsearch>=7.7
-pandas==1.5.0
-matplotlib
+pandas>=1.3.5<=1.5.0
+matplotlib>=3.5.0<=3.6.0
 nbval
 scikit-learn>=0.22.1
 xgboost>=1
