--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,8 +2,8 @@
 # Basic requirements
 #
 elasticsearch>=8.3,<9
-pandas==1.5.0
-matplotlib==3.6.0
+pandas>=1.3.5<=1.5.0
+matplotlib>=3.5.0<=3.6.0
 numpy<2
 tqdm<5
 
