--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 # Basic requirements
 #
 elasticsearch>=8.3,<9
-pandas>=1.3.5<=1.5.0
-matplotlib>=3.5.0<=3.6.0
+pandas==1.5.0
+matplotlib==3.6.0
 numpy<2
