--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,9 +16,9 @@ lightgbm>=2,<4
 
 # PyTorch doesn't support Python 3.11 yet (pytorch/pytorch#86566)
 
-# Elasticsearch uses v1.11.0 of PyTorch
+# Elasticsearch uses v1.13.1 of PyTorch
 torch>=1.13.1,<2.0; python_version<'3.11'
-# Versions known to be compatible with torch 1.13
+# Versions known to be compatible with PyTorch 1.13.1
 sentence-transformers>=2.1.0,<=2.2.2; python_version<'3.11'
 transformers[torch]>=4.12.0,<=4.27.4; python_version<'3.11'
 
