--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,13 +14,13 @@ scikit-learn>=0.22.1,<2
 xgboost>=0.90,<2
 lightgbm>=2,<4
 
-# PyTorch doesn't support Python 3.10 yet (pytorch/pytorch#66424)
+# PyTorch doesn't support Python 3.11 yet (pytorch/pytorch#86566)
 
-# Elasticsearch uses v1.11.0 of PyTorch
-torch>=1.11.0,<1.12.0; python_version<'3.10'
-# Versions known to be compatible with torch 1.11
-sentence-transformers>=2.1.0,<=2.2.2; python_version<'3.10'
-transformers[torch]>=4.12.0,<=4.20.1; python_version<'3.10'
+# Elasticsearch uses v1.13.1 of PyTorch
+torch>=1.13.1,<2.0; python_version<'3.11'
+# Versions known to be compatible with PyTorch 1.13.1
+sentence-transformers>=2.1.0,<=2.2.2; python_version<'3.11'
+transformers[torch]>=4.12.0,<=4.27.4; python_version<'3.11'
 
 #
 # Testing
