--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,9 @@
 elasticsearch>=8.3,<9
 pandas>=1.5,<2
 matplotlib>=3.6
-numpy<1.24
+# Shap is incompatible with NumPy >= 1.24 (elastic/eland#539)
+# Fix NumPy to a known good range of versions
+numpy>=1.2.0,<1.24
 tqdm<5
 
 #
