--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,7 +14,7 @@ tqdm<5
 #
 scikit-learn>=0.22.1,<2
 xgboost>=0.90,<2
-#lightgbm>=2,<4
+lightgbm>=2,<4
 
 # PyTorch doesn't support Python 3.11 yet (pytorch/pytorch#86566)
 
