--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -7,7 +7,7 @@ xgboost>=1
 lightgbm
 sphinx==5.3.0
 nbsphinx
-git+https://github.com/pandas-dev/pydata-sphinx-theme.git
+furo
 
 # traitlets has been having all sorts of release problems lately.
 traitlets<5.1
