--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -1,4 +1,4 @@
-elasticsearch>=7.7
+elasticsearch>=7.7,<8
 pandas>=1.2.0
 matplotlib
 nbval
@@ -8,4 +8,4 @@ xgboost>=1
 lightgbm
 nbsphinx
 numpydoc>=0.9.0
-git+https://github.com/pandas-dev/pydata-sphinx-theme.git@master
+git+https://github.com/pandas-dev/pydata-sphinx-theme.git@main
