Allow es-doc members to trigger CI

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -56,6 +56,7 @@ spec:
       teams:
         ml-core: {}
         clients-team: {}
+        es-docs: {}
         everyone:
           access_level: READ_ONLY
 
