--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,7 +11,7 @@ tqdm<5
 # Extras
 #
 scikit-learn>=1.3,<1.4
-xgboost>=0.90,<=2
+xgboost>=0.90,<2.1
 lightgbm>=2,<4
 
 # PyTorch doesn't support Python 3.11 yet (pytorch/pytorch#86566)
