--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,7 +19,7 @@ lightgbm>=2,<4
 torch==2.1.2
 # Versions known to be compatible with PyTorch 2.1.2
 sentence-transformers>=2.1.0,<=2.3.1 
-transformers[torch]>=4.31.0,<=4.38.1
+transformers[torch]>=4.31.0,<4.36.0
 #
 # Testing
 #
