--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,14 +14,12 @@ scikit-learn>=1.3,<1.4
 xgboost>=0.90,<2
 lightgbm>=2,<4
 
-# PyTorch doesn't support Python 3.11 yet (pytorch/pytorch#86566)
 
-# Elasticsearch uses v1.13.1 of PyTorch
-torch>=1.13.1,<2.0; python_version<'3.11'
-# Versions known to be compatible with PyTorch 1.13.1
-sentence-transformers>=2.1.0,<=2.2.2; python_version<'3.11'
-transformers[torch]>=4.31.0,<=4.33.2; python_version<'3.11'
-
+# Elasticsearch uses v2.1.2 of PyTorch
+torch==2.1.2
+# Versions known to be compatible with PyTorch 2.1.2
+sentence-transformers>=2.1.0,<=2.3.1 
+transformers[torch]>=4.31.0,<4.36.0
 #
 # Testing
 #
