--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -1,13 +1,5 @@
-elasticsearch>=7.7
-pandas>=1.5
-matplotlib>=3.6
+matplotlib
 nbval
-scikit-learn>=0.22.1
-xgboost>=1
-lightgbm
 sphinx==5.3.0
 nbsphinx
 furo
-
-# traitlets has been having all sorts of release problems lately.
-traitlets<5.1
