Update test matrix and packaging metadata

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -29,17 +29,22 @@ steps:
       machineType: "n2-standard-4"
     env:
       PYTHON_VERSION: "{{ matrix.python }}"
-      PANDAS_VERSION: '1.5.0'
+      PANDAS_VERSION: "{{ matrix.pandas}}"
       TEST_SUITE: "xpack"
       ELASTICSEARCH_VERSION: "{{ matrix.stack }}"
     matrix:
       setup:
+        # Python and pandas versions need to be added to the nox configuration too
+        # (in the decorators of the test method in noxfile.py)
+        pandas:
+          - '1.5.0'
+          - '2.2.2'
         python:
+          - '3.12'
           - '3.11'
           - '3.10'
           - '3.9'
-          - '3.8'
-        stack:          
+        stack:
           - '8.16.0-SNAPSHOT'
           - '8.15.2'
           - '8.14.1'
