--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -47,4 +47,10 @@ steps:
         stack:          
           - '9.0.0'
           - '9.1.0-SNAPSHOT'
+      adjustments:
+        - with:
+            pandas: '1.5.0'
+            python: '3.13'
+         skip: true
+
     command: ./.buildkite/run-tests
