--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,7 +9,7 @@ steps:
       - ./.buildkite/lint-code.sh
   - label: ":books: Build documentation"
     env:
-      PYTHON_VERSION: 3.9-bookworm
+      PYTHON_VERSION: 3.13-bookworm
     agents:
       provider: "gcp"
       machineType: "n2-standard-2"
@@ -17,7 +17,7 @@ steps:
       - ./.buildkite/build-documentation.sh
   - label: ":docker: Build Wolfi image"
     env:
-      PYTHON_VERSION: 3.11-bookworm
+      PYTHON_VERSION: 3.13-bookworm
     agents:
       provider: "gcp"
       machineType: "n2-standard-2"
@@ -37,14 +37,21 @@ steps:
         # Python and pandas versions need to be added to the nox configuration too
         # (in the decorators of the test method in noxfile.py)
         pandas:
-          - '1.5.0'
-          - '2.2.3'
+          - '1.5.3'
+          - '2.3.3'
         python:
+          - '3.13'
           - '3.12'
           - '3.11'
           - '3.10'
-          - '3.9'
         stack:          
           - '9.0.0'
-          - '9.1.0-SNAPSHOT'
+          - '9.2.0'
+          - '9.3.0-SNAPSHOT'
+      adjustments:
+        - with:
+            pandas: '1.5.3'
+            python: '3.13'
+          skip: true
+
     command: ./.buildkite/run-tests
